--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.job4j</groupId>
-    <artifactId>elementary</artifactId>
+    <artifactId>job4j_elementary</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
