--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,6 @@ jobs:
     - name: Set up JDK 14
       uses: actions/setup-java@v1
       with:
-        java-version: 14
+        java-version: 14.0.2-ea
     - name: Build with Maven
       run: mvn -B package --file pom.xml
