--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "scripts/test"
+    "test": "npm run unit"
   },
   "repository": {
     "type": "git",
