--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
+    "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit"
   },
   "repository": {
