--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,4 +21,15 @@ jobs:
         with:
           java-version: 14
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn test jacoco:report
+      - name: Upload to Codecov
+          env:
+            CODECOV_TOKEN: $
+          run: bash <(curl -s https://codecov.io/bash)
+      - name: Pitest
+          run: mvn test org.pitest:pitest-maven:mutationCoverage
+      - name: Upload Pitest to Artifacts
+          uses: actions/upload-artifact@v2
+          with:
+            name: pitest-mutation-testing
+            path: target/pit-reports/**/*
