--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
 
@@ -22,3 +22,25 @@ jobs:
           java-version: 14
       - name: Build with Maven
         run: mvn test jacoco:report
+
+  build:
+    runs-on: ubuntu-latest
+    name: Run mvn build and generate coverage report
+    needs: test
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+    java-version: 1.8
+      - name: Build with Maven
+      run: mvn -B package --file pom.xml -Dmaven.test.skip=true
+      - name: generate report codecov
+      run: mvn cobertura:cobertura
+      - name: Upload coverage
+      if: success()
+      run: |
+        curl -s https://codecov.io/bash | bash
+    env:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+    shell: bash
