--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,6 +10,18 @@ on:
     branches: [ master ]
 
 jobs:
+  compile:
+    runs-on: ubuntu-latest
+    name: Running Java ${{ matrix.java }} compile
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 14
+      uses: actions/setup-java@v1
+      with:
+        java-version: 14
+    - name: Compile code
+    run: mvn compile
+
   test:
 
     runs-on: ubuntu-latest
@@ -29,10 +41,10 @@ jobs:
     needs: test
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
+      - name: Set up JDK 14
         uses: actions/setup-java@v1
         with:
-    java-version: 1.8
+    java-version: 14
       - name: Build with Maven
       run: mvn -B package --file pom.xml -Dmaven.test.skip=true
       - name: generate report codecov
