--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ notifications:
   email:
     recipients:
       -lextor78@gmail.com
-    on_success: always # default: change
+    on_success: change # default: change
     on_failure: always # default: always
 
